--- a/Android/app/src/main/res/layout/activity_semester.xml
+++ b/Android/app/src/main/res/layout/activity_semester.xml
@@ -13,4 +13,10 @@
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="0.5dp" />
+
+    <!--ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logounice" /-->
 </androidx.constraintlayout.widget.ConstraintLayout>
