--- a/Android/app/src/main/res/layout/list_category.xml
+++ b/Android/app/src/main/res/layout/list_category.xml
@@ -8,9 +8,12 @@
         android:id="@+id/expandedListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:background="#3C3F41"
         android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:text=""
+        android:textColor="#00574B"
+        android:textSize="18sp"
         tools:ignore="RtlSymmetry" />
 </LinearLayout>
