--- a/Android/app/src/main/res/layout/list_category.xml
+++ b/Android/app/src/main/res/layout/list_category.xml
@@ -8,7 +8,7 @@
         android:id="@+id/expandedListItem"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#3C3F41"
+        android:background="#C3C3C3"
         android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
