--- a/Android/app/src/main/res/layout/activity_category.xml
+++ b/Android/app/src/main/res/layout/activity_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SemestersActivity">
+    tools:context=".activity.TeachingUnitActivity">
 
     <ExpandableListView
         android:id="@+id/expandableListView"
