--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -1,45 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LoginActivity">
+    android:orientation="vertical"
+    tools:context=".activity.LoginActivity" >
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="375dp"
-        android:layout_height="300dp"
-        app:srcCompat="@drawable/logo_unice"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="75dp" />
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="312dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="#FFFFFF"
+        app:srcCompat="@drawable/logo_unice" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:text="Login"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="555dp" />
+    <LinearLayout
+        android:id="@+id/div"
+        android:layout_width="389dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/logo"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="15dp"
+        android:orientation="vertical"
+        android:paddingStart="25dp"
+        android:paddingTop="5dp"
+        android:paddingEnd="25dp"
+        android:paddingBottom="5dp">
 
-    <EditText
-        android:id="@+id/Email"
-        android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:visibility="invisible"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="410dp" />
+        <EditText
+            android:id="@+id/emailInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            android:visibility="invisible" />
 
-    <EditText
-        android:id="@+id/Password"
-        android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:visibility="invisible"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="480dp" />
+        <EditText
+            android:id="@+id/passwordInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:visibility="invisible" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="10dp"
+            android:text="Login"
+            android:textColor="#1977C1"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+</RelativeLayout>
