--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="login_button">#1977C1</color>
+    <color name="list_category_text_view_background">#E7DFDF</color>
+    <color name="list_teaching_unit_text_view_background">#C3C3C3</color>
+    <color name="list_teaching_unit_text_view_font">#00574B</color>
+    <color name="list_semester_text_view_background">#C3C3C3</color>
+    <color name="list_semester_text_view_font">#00574B</color>
 </resources>
