--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,6 @@
         app:srcCompat="@drawable/logo_unice" />
 
     <LinearLayout
-        android:id="@+id/div"
         android:layout_width="389dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
@@ -61,8 +60,9 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="10dp"
-            android:text="Login"
-            android:textColor="#1977C1"
+            android:onClick="login"
+            android:text="@string/login"
+            android:textColor="@color/login_button"
             android:textStyle="bold" />
 
     </LinearLayout>
