--- a/Android/app/src/main/res/layout/list_semester.xml
+++ b/Android/app/src/main/res/layout/list_semester.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,15 +6,14 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/listTitle"
+        android:id="@+id/semester"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/list_category_text_view_background"
-        android:hapticFeedbackEnabled="false"
-        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:background="@color/list_semester_text_view_background"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:textColor="@android:color/black"
+        android:text=""
+        android:textColor="@color/list_semester_text_view_font"
+        android:textSize="18sp"
         tools:ignore="RtlSymmetry" />
-
 </LinearLayout>
