--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -5,19 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/cardview_light_background"
     tools:context=".activity.LoginActivity" >
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="wrap_content"
-        android:layout_height="312dp"
+        android:layout_width="298dp"
+        android:layout_height="258dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="52dp"
         android:background="#FFFFFF"
         app:srcCompat="@drawable/logo_unice" />
 
@@ -27,9 +28,9 @@
         android:layout_below="@+id/logo"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="62dp"
+        android:layout_marginEnd="12dp"
         android:orientation="vertical"
         android:paddingStart="25dp"
         android:paddingTop="5dp"
@@ -61,7 +62,7 @@
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="10dp"
             android:onClick="login"
-            android:text="@string/login"
+            android:text="Se Connecter"
             android:textColor="@color/login_button"
             android:textStyle="bold" />
 
