--- a/Android/app/src/main/res/layout/list_category.xml
+++ b/Android/app/src/main/res/layout/list_category.xml
@@ -9,8 +9,9 @@
     <TextView
         android:id="@+id/listTitle"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/list_category_text_view_background"
+        android:layout_height="51dp"
+        android:background="#FFFFFF"
+        android:gravity="center_vertical"
         android:hapticFeedbackEnabled="false"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingTop="10dp"
