--- a/Android/app/src/main/res/layout/list_semester.xml
+++ b/Android/app/src/main/res/layout/list_semester.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,12 +9,13 @@
     <TextView
         android:id="@+id/semester"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/list_semester_text_view_background"
+        android:layout_height="82dp"
+        android:background="#EAE7E7"
+        android:gravity="center_vertical"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:text=""
         android:textColor="@color/list_semester_text_view_font"
-        android:textSize="18sp"
+        android:textSize="25sp"
+        app:autoSizeTextType="none"
         tools:ignore="RtlSymmetry" />
 </LinearLayout>
