--- a/Android/app/src/main/res/layout/list_teaching_unit.xml
+++ b/Android/app/src/main/res/layout/list_teaching_unit.xml
@@ -5,16 +5,40 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/expandedListItem"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/list_teaching_unit_text_view_background"
-        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text=""
-        android:textColor="@color/list_teaching_unit_text_view_font"
-        android:textSize="18sp"
-        tools:ignore="RtlSymmetry" />
+        android:layout_gravity="left"
+        android:background="#F1EAED"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/expandedListItem"
+            android:layout_width="363dp"
+            android:layout_height="wrap_content"
+            android:background="#F1EAED"
+            android:clickable="true"
+            android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text=""
+            android:textColor="@color/list_teaching_unit_text_view_font"
+            android:textSize="18sp"
+            tools:ignore="RtlSymmetry" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="#F1EAED"
+            android:clickable="true"
+            android:focusable="false"
+            android:text=""
+            android:textColorLink="@color/colorPrimary"
+            android:textCursorDrawable="?android:attr/listChoiceIndicatorMultiple" />
+
+    </LinearLayout>
+
 </LinearLayout>
