Ajout du bouton d'enregistrement du parcours de l'étudiant. Double click pour quitter. Désactivation des tests de l'activité Semester car dépendants du serveur.

--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="list_teaching_unit_text_view_font">#00574B</color>
     <color name="list_semester_text_view_background">#C3C3C3</color>
     <color name="list_semester_text_view_font">#00574B</color>
+    <color name="validate_career_button">#C3C3C3</color>
+    <color name="validate_career_button_background">#009688</color>
 </resources>
