--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -23,13 +23,12 @@
         app:srcCompat="@drawable/logo_unice" />
 
     <LinearLayout
-        android:layout_width="389dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/logo"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="62dp"
         android:layout_marginEnd="12dp"
         android:orientation="vertical"
         android:paddingStart="25dp"
@@ -62,7 +61,7 @@
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="10dp"
             android:onClick="login"
-            android:text="Se Connecter"
+            android:text="@string/login"
             android:textColor="@color/login_button"
             android:textStyle="bold" />
 
