--- a/Android/app/src/main/res/layout/list_teaching_unit.xml
+++ b/Android/app/src/main/res/layout/list_teaching_unit.xml
@@ -8,34 +8,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:background="#F1EAED"
-        android:clickable="true"
-        android:focusable="true"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/expandedListItem"
-            android:layout_width="363dp"
             android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight=".9"
             android:background="#F1EAED"
-            android:clickable="true"
             android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:text=""
             android:textColor="@color/list_teaching_unit_text_view_font"
             android:textSize="18sp"
             tools:ignore="RtlSymmetry" />
 
         <CheckBox
-            android:layout_width="wrap_content"
+            android:id="@+id/teachinUnitCheckbox"
             android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight=".1"
+            android:layout_marginEnd="10dp"
             android:layout_gravity="center"
             android:background="#F1EAED"
             android:clickable="true"
-            android:focusable="false"
-            android:text=""
+            android:focusable="true"
+            android:onClick="toggleCheckBox"
             android:textColorLink="@color/colorPrimary"
             android:textCursorDrawable="?android:attr/listChoiceIndicatorMultiple" />
 
