--- a/Android/app/src/main/res/layout/activity_teaching_unit_details.xml
+++ b/Android/app/src/main/res/layout/activity_teaching_unit_details.xml
@@ -5,29 +5,37 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/algo1"
+        android:id="@+id/teaching_unit_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="@string/algo1"
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="24sp"
         android:textStyle="bold"/>
+
     <TextView
-        android:id="@+id/algo1_ref"
-        android:layout_below="@id/algo1"
+        android:id="@+id/teaching_unit_code"
+        android:layout_below="@id/teaching_unit_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/algo1_ref"
         android:textAlignment="center"
         android:textColor="#000"
         android:textSize="14sp"
         android:textStyle="italic"/>
 
+    <TextView
+        android:id="@+id/teaching_unit_description"
+        android:layout_below="@id/teaching_unit_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:textSize="15sp"
+        android:textColor="#000" />
+
     <LinearLayout
-        android:id="@+id/profs_algo1"
-        android:layout_below="@id/algo1_description"
+        android:id="@+id/teaching_unit_teachers_raw"
+        android:layout_below="@id/teaching_unit_description"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
@@ -50,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
-                android:text="Responsable"
+                android:text="@string/responsible_teacher"
                 android:textColor="#fff" />
         </LinearLayout>
 
@@ -65,26 +73,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimaryDark"
-                android:text="Intervenants"
+                android:text="@string/intervening_teacher"
                 android:textColor="#fff" />
         </LinearLayout>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/algo1_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:textSize="15sp"
-        android:textColor="#000"
-        android:layout_below="@id/algo1_ref"
-        android:text="@string/algo_description" />
 
     <ImageView
         android:id="@+id/logo"
         android:layout_width="234dp"
         android:layout_height="206dp"
-        android:layout_below="@+id/profs_algo1"
+        android:layout_below="@+id/teaching_unit_teachers_raw"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
