--- a/Android/app/src/main/res/layout/activity_profil.xml
+++ b/Android/app/src/main/res/layout/activity_profil.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfilActivity">
+    tools:context=".activity.ProfilActivity">
 
     <LinearLayout
         android:id="@+id/layout1"
@@ -78,7 +78,7 @@
         android:textColor="#000" />
     <!--
     IDEES pour plus tard
-
+-->
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="100dp"
@@ -94,18 +94,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_margin="10dp"
-        android:text="Cours donnés" />
-
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_weight="1"
-        android:text="UE suivies" />
+        android:text="Site" />
 
     </LinearLayout>
-    -->
 
 </RelativeLayout>
