Création de tests sur SemesterListActivity

--- a/Android/app/src/main/res/layout/activity_semesters_list.xml
+++ b/Android/app/src/main/res/layout/activity_semesters_list.xml
@@ -6,7 +6,7 @@
     tools:context=".activity.SemestersListActivity">
 
     <ListView
-        android:id="@+id/ListView"
+        android:id="@+id/semesterListView"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 
