--- a/Android/app/src/main/res/layout/activity_semesters_list.xml
+++ b/Android/app/src/main/res/layout/activity_semesters_list.xml
@@ -6,11 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:tools="http://schemas.android.com/tools"
         tools:context=".activity.SemestersListActivity">
+
 
         <ListView
             android:id="@+id/semesterListView"
