--- a/Android/app/src/main/res/layout/activity_semesters_list.xml
+++ b/Android/app/src/main/res/layout/activity_semesters_list.xml
@@ -7,17 +7,15 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:background="@drawable/background_gradient"
         tools:context=".activity.SemestersListActivity">
-
 
         <ListView
             android:id="@+id/semesterListView"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ListView
