--- a/Android/app/src/main/res/layout/list_semester.xml
+++ b/Android/app/src/main/res/layout/list_semester.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +9,15 @@
 
     <TextView
         android:id="@+id/semester"
-        android:layout_width="fill_parent"
-        android:layout_height="82dp"
-        android:background="#EAE7E7"
-        android:gravity="center_vertical"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/list_semester_text_view_font"
+        android:layout_width="match_parent"
+        android:layout_height="74dp"
+        android:background="@drawable/semester_field"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:textColor="#000"
         android:textSize="25sp"
         app:autoSizeTextType="none"
         tools:ignore="RtlSymmetry" />
