Mise en marche de la barre de recherche

--- a/Android/app/src/main/res/layout/activity_semesters_list.xml
+++ b/Android/app/src/main/res/layout/activity_semesters_list.xml
@@ -18,6 +18,9 @@
             android:layout_height="match_parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include layout="@layout/search_teachingunit_list" />
+
     <ListView
         android:id="@+id/navList"
         android:layout_width="200dp"
