--- a/Android/app/src/main/res/menu/options_menu.xml
+++ b/Android/app/src/main/res/menu/options_menu.xml
@@ -2,13 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/search"
-        android:checkable="true"
+        android:id="@+id/action_search"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/search_title"
         android:visible="true"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView" />
+        app:showAsAction="always" />
 </menu>
-
