--- a/Android/app/src/main/res/menu/options_menu.xml
+++ b/Android/app/src/main/res/menu/options_menu.xml
@@ -6,7 +6,7 @@
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/search_title"
-        android:visible="true"
+        android:visible="false"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="always" />
 </menu>
