--- a/Android/app/src/main/res/layout/activity_register.xml
+++ b/Android/app/src/main/res/layout/activity_register.xml
@@ -9,18 +9,41 @@
     tools:context=".activity.RegisterActivity">
 
     <LinearLayout
-        android:id="@+id/nameRegisterLayout"
+        android:id="@+id/registerErrorLayout"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/lastNameRegisterLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/registerErrorTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="@color/pink"
+            android:textStyle="italic"
+            android:visibility="visible" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lastNameRegisterLayout"
         android:layout_width="match_parent"
         android:layout_height="34dp"
         android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         android:weightSum="3"
-        app:layout_constraintBottom_toTopOf="@+id/lastNameRegisterLayout"
+        app:layout_constraintBottom_toTopOf="@+id/nameRegisterLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
         <EditText
-            android:id="@+id/nameRegister"
+            android:id="@+id/lastNameRegister"
             android:layout_width="0dp"
             android:layout_height="34dp"
             android:layout_weight="2"
@@ -34,7 +57,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/lastNameRegisterLayout"
+        android:id="@+id/nameRegisterLayout"
         android:layout_width="match_parent"
         android:layout_height="34dp"
         android:layout_marginBottom="8dp"
@@ -42,10 +65,11 @@
         android:weightSum="3"
         app:layout_constraintBottom_toTopOf="@+id/emailRegLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
         <EditText
-            android:id="@+id/lastNameRegister"
+            android:id="@+id/nameRegister"
             android:layout_width="0dp"
             android:layout_height="34dp"
             android:layout_weight="2"
@@ -157,6 +181,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textAlignment="center"
+            android:onClick="register"
             android:background="@drawable/right_button"
             android:text="Créer compte"
             android:textColor="#fff"
