--- a/Android/app/src/main/res/layout/activity_career_summary.xml
+++ b/Android/app/src/main/res/layout/activity_career_summary.xml
@@ -18,10 +18,10 @@
         android:gravity="center"
         android:text="Parcours Choisi :  "
         android:textColor="@color/colorPrimary"
-        android:textSize="25sp"></TextView>
+        android:textSize="25sp" />
 
     <ListView
-        android:id="@+id/Semester_career_summary"
+        android:id="@+id/teBySemester"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginStart="15dp"
@@ -30,7 +30,8 @@
         android:layout_marginBottom="5dp"
         android:background="@color/cardview_dark_background"
         android:textColor="@color/colorPrimary"
-        android:textSize="25sp"></ListView>
+        android:textSize="25sp" />
+
 
 
 </LinearLayout>
