--- a/Android/app/src/main/res/drawable/semester_field.xml
+++ b/Android/app/src/main/res/drawable/semester_field.xml
@@ -2,7 +2,6 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="25sp"/>
-    <solid android:color="#fff" />
-
+    <corners android:radius="50sp"/>
+    <solid android:color="#3fff" />
 </shape>
