--- a/Android/app/src/main/res/layout/semester_list_item.xml
+++ b/Android/app/src/main/res/layout/semester_list_item.xml
@@ -17,7 +17,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:textColor="#000"
+        android:textColor="#fff"
         android:textSize="25sp"
         app:autoSizeTextType="none"
         tools:ignore="RtlSymmetry" />
