Créer une activité permettant de nommer le parcours
Ainsi, le client aura la choix de le rendre public ou pas.
Désormais, nommer le parcours est obligatoire. #73

--- a/Android/app/src/main/res/values/ids.xml
+++ b/Android/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="lastNameRegisterLayout" type="id" />
     <item name="emailRegLayout" type="id" />
+    <item name="nameErrorTextView" type="id" />
 </resources>
