Rendre fonctionnel la checkbox "se souvenir de moi"
#82

--- a/Android/app/src/main/res/values/ids.xml
+++ b/Android/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="lastNameRegisterLayout" type="id" />
     <item name="emailRegLayout" type="id" />
     <item name="nameErrorTextView" type="id" />
+    <item name="saveLoginCheckBox" type="id" />
 </resources>
