Améliorer l'activité "afficher le parcours" #79

--- a/Android/app/src/main/res/layout/activity_career_summary.xml
+++ b/Android/app/src/main/res/layout/activity_career_summary.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/summaryCareer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -21,7 +22,7 @@
             android:layout_marginBottom="5dp"
             android:background="#fff"
             android:gravity="center"
-            android:text="Parcours Choisi : "
+            android:text="Parcours Choisi"
             android:textColor="#000"
             android:textSize="25sp" />
 
