Auto stash before merge of "master" and "origin/master"
Optimisation Afficahge UI Home page

--- a/Android/app/src/main/res/layout/activity_home.xml
+++ b/Android/app/src/main/res/layout/activity_home.xml
@@ -30,7 +30,7 @@
                 android:paddingBottom="5dp"
                 android:id="@+id/linearLayout4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:orientation="horizontal"
                 android:weightSum="2"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
@@ -42,7 +42,7 @@
                     android:layout_marginEnd="5dp"
                     android:id="@+id/create_new_career"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:onClick="goCreate"
                     android:background="@drawable/home_button"
@@ -53,7 +53,7 @@
                     android:layout_marginEnd="10dp"
                     android:id="@+id/edit_career"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:onClick="goEdit"
                     android:background="@drawable/home_button"
@@ -64,7 +64,7 @@
                 android:paddingBottom="5dp"
                 android:id="@+id/linearLayout2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
@@ -73,7 +73,7 @@
                     android:layout_marginEnd="5dp"
                     android:id="@+id/main_career"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:onClick="goMainCareer"
                     android:background="@drawable/home_button"
@@ -84,7 +84,7 @@
                     android:layout_marginEnd="10dp"
                     android:id="@+id/my_careers_list"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:onClick="goMyCareersList"
                     android:background="@drawable/home_button"
@@ -95,7 +95,7 @@
                 android:paddingBottom="5dp"
                 android:id="@+id/linearLayout3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="10">
@@ -103,7 +103,7 @@
                 <Button
                     android:id="@+id/students_career"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="9.5"
                     android:background="@drawable/home_button"
                     android:text="@string/home_display_public_career" />
