--- a/Android/app/src/main/res/drawable/right_button.xml
+++ b/Android/app/src/main/res/drawable/right_button.xml
@@ -6,8 +6,8 @@
         android:topLeftRadius="50sp"
         android:bottomLeftRadius="50sp"/>
     <gradient
-        android:startColor="@color/pink"
+        android:startColor="#fff"
         android:endColor="@color/colorPrimary"
-        android:angle="180" />
+        android:angle="270" />
 
 </shape>
