--- a/Android/app/src/main/res/drawable/semester_field.xml
+++ b/Android/app/src/main/res/drawable/semester_field.xml
@@ -3,5 +3,6 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="50sp"/>
-    <solid android:color="#3fff" />
+    <stroke android:width="0.5dp" android:color="@color/colorPrimaryDark"/>
+    <solid android:color="#2fff" />
 </shape>
