Récupération des parcours publics

--- a/Android/app/src/main/res/layout/activity_home.xml
+++ b/Android/app/src/main/res/layout/activity_home.xml
@@ -105,6 +105,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="9.5"
+                    android:onClick="goPublicCareersList"
                     android:background="@drawable/home_button"
                     android:text="@string/home_display_public_career" />
             </LinearLayout>
