--- a/Android/app/src/main/res/layout/custom.xml
+++ b/Android/app/src/main/res/layout/custom.xml
@@ -12,7 +12,7 @@
         android:background="@drawable/semester_field">
 
         <TextView
-            android:id="@+id/careers"
+            android:id="@+id/careerName"
             android:layout_width="match_parent"
             android:layout_height="74dp"
             android:textColor="#00BCD4"
