Fix : Créer un parcours principal lorsqu'il est demandé s'il n'existe pas

--- a/Android/app/src/main/res/layout/teachingunit_detail.xml
+++ b/Android/app/src/main/res/layout/teachingunit_detail.xml
@@ -1,94 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activity.TeachingUnitDetailFragment">
 
-<TextView
-    android:id="@+id/teaching_unit_title"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="15dp"
-    android:textAlignment="center"
-    android:textColor="#000"
-    android:textSize="24sp"
-    android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/teaching_unit_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
-<TextView
-    android:id="@+id/teaching_unit_code"
-    android:layout_below="@id/teaching_unit_title"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textAlignment="center"
-    android:textColor="#000"
-    android:textSize="14sp"
-    android:textStyle="italic"/>
+    <TextView
+        android:id="@+id/teaching_unit_code"
+        android:layout_below="@id/teaching_unit_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="14sp"
+        android:textStyle="italic" />
 
-<TextView
-    android:id="@+id/teaching_unit_description"
-    android:layout_below="@id/teaching_unit_code"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="15dp"
-    android:textSize="15sp"
-    android:textColor="#000" />
-
-<LinearLayout
-    android:id="@+id/teaching_unit_teachers_raw"
-    android:layout_below="@id/teaching_unit_description"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_alignParentStart="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="10dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:layout_marginTop="25dp"
-    android:orientation="horizontal"
-    android:weightSum="2">
+    <TextView
+        android:id="@+id/teaching_unit_description"
+        android:layout_below="@id/teaching_unit_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:textSize="15sp"
+        android:textColor="#000" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:layout_weight="1">
+        android:id="@+id/teaching_unit_teachers_raw"
+        android:layout_below="@id/teaching_unit_description"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="25dp"
+        android:orientation="horizontal"
+        android:weightSum="2" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
-            android:text="@string/responsible_teacher"
-            android:textColor="#fff" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:layout_weight="1">
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark"
-            android:text="@string/intervening_teacher"
-            android:textColor="#fff" />
-    </LinearLayout>
-</LinearLayout>
-
-<!--ImageView
-    android:id="@+id/logo"
-    android:layout_width="234dp"
-    android:layout_height="206dp"
-    android:layout_below="@+id/teaching_unit_teachers_raw"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="15dp"
-    app:srcCompat="@mipmap/icon_foreground" /-->
+    <!--ImageView
+        android:id="@+id/logo"
+        android:layout_width="234dp"
+        android:layout_height="206dp"
+        android:layout_below="@+id/teaching_unit_teachers_raw"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
+        app:srcCompat="@mipmap/icon_foreground" /-->
 
 </RelativeLayout>
